# WP4T41-01-Data-Compression-for-Low-Power

./: README.md
Compression/source/: CMakeLists.txt  FileManag.cpp  FileManag.h  LZW.cpp  LZW.h  LZWCompression.cpp  Utility.cpp  Utility.h
Compression/test/: dc-test.cpp
Compression/test/include/: data_compression.h
Decompression/source/: CMakeLists.txt  FileManag.cpp  LZW.cpp  LZWDeCompression.cpp  Utility.cpp  data_compression.h
Decompression/test/: dc-test.cpp
Decompression/test/include/: FileManag.h  LZW.h  Utility.h
